# NMDB

./: .gitignore  001_process_data.ipynb  002_calc_some_metrics.ipynb  003_final_results.ipynb  004.ipynb  004_predictions.ipynb  005_plot_series.ipynb  006_calc_stats.ipynb  007_automated_onset_calc.ipynb  README.md  plot_tests.ipynb  pyproject.toml
data/ForbushDecrease/: summary_derivatives-ewm_alpha_0.15.csv  summary_derivatives.csv
data/ForbushDecrease/2023-04-23/: aatb_metrics-windowsize_130-ewm_alpha_0.15.csv  aatb_metrics-windowsize_130.csv  apty_metrics-windowsize_130-ewm_alpha_0.15.csv  apty_metrics-windowsize_130.csv  domb_metrics-windowsize_130-ewm_alpha_0.15.csv  domb_metrics-windowsize_130.csv  invk_metrics-windowsize_130-ewm_alpha_0.15.csv  invk_metrics-windowsize_130.csv  irk2_metrics-windowsize_130-ewm_alpha_0.15.csv  irk2_metrics-windowsize_130.csv  lmks_metrics-windowsize_130-ewm_alpha_0.15.csv  lmks_metrics-windowsize_130.csv  mxco_metrics-windowsize_130-ewm_alpha_0.15.csv  (+10 more)
outputs/: all_station_results.csv  event_summary.csv  global_rank.csv  station_results_2023-04-23.csv  station_results_2024-03-24.csv  station_results_2024-05-10.csv
outputs/lead-lag/: event_summary.csv  global_rank.csv  station_results_2023-04-23.csv  station_results_2024-03-24.csv  station_results_2024-05-10.csv
tables/: event_summary.tex  rank_global.tex
tables/lead-lag/: event_summary.tex  rank_global.tex
tools/: generate_results.py  generate_results_lead_lag.py  plot_overlays.py
utils/: __init__.py  calcs.py  constants.py  load.py  normalization.py  plots.py
(+48 files in other folders)
