[project]
name = "nmdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antropy>=0.1.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nolds>=0.6.2",
    "numpy<=2.2",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
